# gimem

./: .gitignore  CLAUDE.md  README.md  SKILL.md  marketplace.json  plugin.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
memory-store/: Cargo.toml
memory-store/examples/: basic.rs
memory-store/src/: consolidation.rs  error.rs  labels.rs  lib.rs  manager.rs  models.rs  schema.rs  search.rs  store.rs
memory-store/tests/: cli.rs  integration.rs
skills/gimem/: SKILL.md
